﻿[B]0.4.0[/B]

- Added and improved skin settings (related to the circle items of the Home Menu), added a textfile viewer.
- Fixed some bugs.

[B]0.3.4[/B]

- Added three more custom options in the Home Menu among the pre-existing options Videos, Music, and Pictures.
- Added help-texts to all custom option-related dialogs.
- Added and replaced some artwork, mostly icons (media-flagging) and images for the Home Menu circle.
- Added 'reset to default'-buttons to all the Revolve skin settings-windows.
- Fixed some bugs.

[B]0.3.3[/B]

- Added submenus including a submenu editor as part of the custom options editor.
- Increased number of custom options in the Home Menu from 10 to 20, added an option to always open Videos and Music in the root.
- Fixed some bugs.

[B]0.3.2[/B]

- Changed the artwork within the circle of the Home Menu (replaced the turntable and the television).
- Redesigned Custom Option-related windows and changed skin variables involved with these custom options.
- Fixed some bugs.

[B]0.3.1[/B]

- Improved the items in Home Menu circle (Album-items and Next Aired-information is added, source can be configured, list is increased from 5 to 10 items).
- Changed the artwork within the circle of the Home Menu (changed the television, added a turntable and a book).
- Added a Banners-view (renamed the old Banners-view to Rotate List).
- Improved some views (added banner-support to the Drop List-view).
- Split Custom My Items window into two new windows (one for static list/script-support, one for dynamic list/plug-in support).
- Added a custom Exit Menu.
- Fixed some bugs.

[B]0.3.0[/B]

- Added and fixed some background images.
- Fixed some bugs.

[B]0.2.6[/B]

- Improved media flagging (mostly for pictures).
- Improved karaoke-windows.
- Added and changed some background images.
- Fixed some bugs.

[B]0.2.5[/B]

- Created a generic MyItems window for access to XBMC's latest items and Screen Widgets' recent, random, and recommended items.