@@ -10,7 +10,7 @@
 			<control type="group" description="Left Panel of File Manager">
 				<posx>40</posx>
 				<posy>80</posy>
-				<include>ListFrameForFileManager</include>
+				<include>LeftListFrameForFileManager</include>
 				
 				<control type="label" id="101" description="Path in Left Panel">
 					<posx>20</posx>
@@ -23,24 +23,26 @@
 				</control>
 				
 				<control type="label" id="12" description="Number of Items in Left Panel Label">
-					<posx>20</posx>
-					<posy>760</posy>
-					<width>860</width>
+					<posx>40</posx>
+					<posy>862</posy>
+					<width>820</width>
 					<height>30</height>
 					<textcolor>BackgroundColor</textcolor>
+                    <font>DetailListItemFont</font>
 					<align>left</align>
 					<label>-</label>
 				</control>
 				
 				<control type="list" id="20" description="File List in Left Panel">
-					<posx>6</posx>
+					<posx>31</posx>
 					<posy>60</posy>
-					<width>888</width>
+					<width>862</width>
 					<height>800</height>
-					<onleft>Noop</onleft>
-					<onright>21</onright>
+                    <pagecontrol>30</pagecontrol>
 					<onup>20</onup>
 					<ondown>20</ondown>
+					<onleft>30</onleft>
+					<onright>21</onright>
 
 					<itemlayout height="100">
 						<include>NormalListItemForFileManager</include>
@@ -57,12 +59,23 @@
 						</control>
 					</focusedlayout>
 				</control>
+                
+                <control type="scrollbar" id="30">
+                    <posx>6</posx>
+					<posy>54</posy>
+                    <width>20</width>
+                    <height>812</height>
+                    <ondown>30</ondown>
+                    <onup>30</onup>
+                    <onleft>Noop</onleft>
+                    <onright>20</onright>
+                </control>
 			</control>
 			
 			<control type="group" description="Right Panel of File Manager">
 				<posx>980</posx>
 				<posy>80</posy>
-				<include>ListFrameForFileManager</include>
+				<include>RightListFrameForFileManager</include>
 				
 				<control type="label" id="102" description="Path in Right Panel">
 					<posx>20</posx>
@@ -75,24 +88,26 @@
 				</control>
 				
 				<control type="label" id="13" description="Number of Items in Right Panel Label">
-					<posx>20</posx>
-					<posy>760</posy>
-					<width>860</width>
+					<posx>40</posx>
+					<posy>862</posy>
+					<width>820</width>
 					<height>30</height>
 					<textcolor>BackgroundColor</textcolor>
+                    <font>DetailListItemFont</font>
 					<align>left</align>
 					<label>-</label>
 				</control>
 				
 				<control type="list" id="21" description="File List in Right Panel">
-					<posx>6</posx>
+					<posx>7</posx>
 					<posy>60</posy>
-					<width>888</width>
+					<width>861</width>
 					<height>800</height>
-					<onleft>20</onleft>
-					<onright>Noop</onright>
+                    <pagecontrol>31</pagecontrol>
 					<onup>21</onup>
 					<ondown>21</ondown>
+					<onleft>20</onleft>
+					<onright>31</onright>
 
 					<itemlayout height="100">
 						<include>NormalListItemForFileManager</include>
@@ -109,6 +124,17 @@
 						</control>
 					</focusedlayout>
 				</control>
+                
+                <control type="scrollbar" id="31">
+                    <posx>874</posx>
+					<posy>54</posy>
+                    <width>20</width>
+                    <height>812</height>
+                    <ondown>31</ondown>
+                    <onup>31</onup>
+                    <onleft>21</onleft>
+                    <onright>Noop</onright>
+                </control>
 			</control>
 		</control>
 	</controls>
