@@ -151,6 +151,7 @@
 		<font>
 			<name>DetailListItemFont</name>
 			<filename>OpenSans-Regular.ttf</filename>
+            <style>uppercase</style>
 			<size>24</size>
 		</font>
 		
