@@ -1,6 +1,7 @@
 ﻿[B]0.4.0[/B]
 
 - Added and improved skin settings (related to the circle items of the Home Menu), added a textfile viewer.
+- Improved FileManager en MyMusicPlaylistEditor-windows (added scrollbars, fixed item count-label).
 - Fixed some bugs.
 
 [B]0.3.4[/B]
